# pyspiderNX2

./: Dockerfile  add_retry.py  amazon_map_polyfill.js  amazon_scraper_fixed.py  backup_and_optimize_db.sh  config.json  fix_syntax_error.py  fix_yahoo_project.py  fix_yahoo_project2.py  fix_yahoo_project3.py  fix_yahoo_project4.py  fixed_amazon.py  fixed_amazon_puppeteer.py  fixed_amazon_puppeteer_bytes_fix.py  fixed_script.py  improved_yahoo_response.json  improved_yahoo_script.py  install_all.sh  install_cron_jobs.sh  install_logrotate.sh  install_service.sh  metrics_dashboard.html  monitor_queues.py  next.config.js  optimized_config.json  package-lock.json  package.json  pyproject.toml  pyspider-logrotate  pyspider.service  redis_config.json  requirements.txt  run_improved_yahoo.py  run_yahoo.py  run_yahoo_detail_page.py  run_yahoo_index_page.py  run_yahoo_index_page_with_output.py  run_yahoo_v2.py  sqlite_config.json  start-local.sh  (+10 more)
docs/: PerformanceOptimization.md  Puppeteer-Migration.md
examples/: optimized_fetcher_example.py  playwright_example.py
pyspider/: __init__.py  run.py
pyspider/database/: __init__.py  basedb.py
pyspider/database/local/: projectdb.py
pyspider/database/mysql/: resultdb.py  taskdb.py
pyspider/database/redis/: projectdb.py  resultdb.py  taskdb.py
pyspider/database/sqlalchemy/: projectdb.py  resultdb.py  taskdb.py
pyspider/fetcher/: connection_pool_optimizer.py  optimized_async_fetcher.py  playwright_manager.py  puppeteer_fetcher.js  py_playwright_fetcher.py  tornado_fetcher.py
pyspider/libs/: base_handler.py  bench.py  counter.py  dataurl.py  error_handler.py  error_types.py  errors.py  memory_optimizer.py  metrics.py  multiprocessing_queue.py  pprint.py  response.py  result_dump.py  selector_pipeline.py  url.py  utils.py  wsgi_xmlrpc.py
pyspider/message_queue/: kombu_queue.py  rabbitmq.py  redis_queue.py
pyspider/processor/: processor.py  project_module.py
pyspider/result/: result_worker.py
pyspider/sample_projects/: robust_error_handling.py
pyspider/scheduler/: scheduler.py  task_queue.py
pyspider/webui/: __init__.py  api.py  app.py  debug.py  flask_api.py  index.py  metrics.py  products.py  result.py  security.py  selector_tester.py  task.py
pyspider/webui/static/: package-lock.json  package.json  vite.config.js
pyspider/webui/static/src/: App.vue  css_selector_helper.js  debug-v2.js  debug-v2.less  index-v2.js  index-v2.less  index.vue3.js
pyspider/webui/templates/: dashboard-v2.html  debug-v2.html  debug.html  index-v2.html  index-v2.html.bak  index.html  metrics-dashboard.html  products-v2.html  result-v2.html  task-v2.html  tasks-v2.html
pyspider/webui2/: Dockerfile  __init__.py  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
pyspider/webui2/prisma/: schema.prisma
pyspider/webui2/public/: cors-test.html
pyspider/webui2/src/: App.tsx
pyspider/webui2/src/api/: auth.ts  client.ts  debug.ts  index.ts  monitor.ts  projects.ts  results.ts  tasks.ts
src/components/: CodeHighlighter.jsx
src/server/: app.js
src/styles/: main.scss
templates/: index-v2-new.html
tests/: test_fetcher.py
(+22 files in other folders)
